# Angels

./: AndroidManifest.xml  CMakeLists.txt  rapport_bugs_ameliorations.md
Angels_v3/.github/workflows/: build.yml
include/: mi_core.h  panel_state.h
java/com/angels/memory/: AngelsOverlayService.java  AngelsPanel.java  NativeCore.java
src/core/: mem_freeze.cpp  mem_maps.cpp  mem_rw.cpp  mem_scan.cpp  speed_hack.cpp  string_scan.cpp  watch_list.cpp
src/jni/: jni_entry.cpp  jni_panel.cpp
src/ui/: panel_state.cpp
